static code for project

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,7 +21,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link active text-uppercase" style="font-weight: bold;" routerLink="/playerinfo">Player Info</a>
-          </li>
+          </li>git push -u origin main
         </ul>
       </div>
     </div>
