navbar issue fix

--- a/src/app/point-table/point-table.component.html
+++ b/src/app/point-table/point-table.component.html
@@ -12,7 +12,7 @@
       </thead>
       <tbody>
         <tr>
-          <td>Team A</td>
+          <td>Jump Smashers</td>
           <td>5</td>
           <td>3</td>
           <td>1</td>
@@ -20,7 +20,7 @@
           <td>10</td>
         </tr>
         <tr>
-          <td>Team B</td>
+          <td>Smashers Pro</td>
           <td>5</td>
           <td>2</td>
           <td>2</td>
@@ -28,22 +28,14 @@
           <td>7</td>
         </tr>
         <tr>
-          <td>Team C</td>
+          <td>Backcourt Bandits</td>
           <td>5</td>
           <td>1</td>
           <td>3</td>
           <td>1</td>
           <td>4</td>
         </tr>
-        <tr>
-          <td>Team D</td>
-          <td>5</td>
-          <td>0</td>
-          <td>4</td>
-          <td>1</td>
-          <td>1</td>
-        </tr>
-      </tbody>
+       </tbody>
     </table>
   </div>
   
